tests/instanceof/instanceof.exp
Error ---------------------------------------------------------------------------------------------- instanceof.js:17:34

Cannot assign `'1337'` to `g.foo` because string [1] is incompatible with number [2].

   instanceof.js:17:34
   17|     if (g instanceof X1) g.foo = '1337';  // oops
                                        ^^^^^^ [1]

References:
   instanceof.js:4:17
    4| class X1 { foo: number; };
                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- instanceof.js:34:42

Cannot assign `'1337'` to `g.bar.foo` because string [1] is incompatible with number [2].

   instanceof.js:34:42
   34|     if (g.bar instanceof X1) g.bar.foo = '1337';  // oops
                                                ^^^^^^ [1]

References:
   instanceof.js:4:17
    4| class X1 { foo: number; };
                       ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- instanceof.js:51:50

Cannot assign `'1337'` to `g.baz.bar.foo` because string [1] is incompatible with number [2].

   instanceof.js:51:50
   51|     if (g.baz.bar instanceof X1) g.baz.bar.foo = '1337';  // oops
                                                        ^^^^^^ [1]

References:
   instanceof.js:4:17
    4| class X1 { foo: number; };
                       ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- instanceof.js:83:5

Cannot perform arithmetic operation because array type [1] is not a number.

   instanceof.js:83:5
   83|     x++; // error
           ^

References:
   instanceof.js:81:18
   81| function foo1(x: Array<number> | number) {
                        ^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------- instanceof.js:85:5

Cannot assign `123` to `x[0]` because an index signature declaring the expected key / value type is missing in
number [1].

   instanceof.js:85:5
   85|     x[0] = 123; // error
           ^^^^

References:
   instanceof.js:81:34
   81| function foo1(x: Array<number> | number) {
                                        ^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- mixed.js:6:6

Cannot cast `x` to number because `C` [1] is incompatible with number [2].

   mixed.js:6:6
   6|     (x: number);
           ^

References:
   mixed.js:5:20
   5|   if (x instanceof C) {
                         ^ [1]
   mixed.js:6:9
   6|     (x: number);
              ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- mixed.js:40:5

Cannot get `x.p` because property `p` is missing in `Object` [1].

   mixed.js:40:5
   40|     x.p;
           ^^^

References:
   mixed.js:39:20
   39|   if (x instanceof Object) {
                          ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- mixed.js:46:5

Cannot call `x` because a call signature declaring the expected parameter / return type is missing in `Function` [1].

   mixed.js:46:5
   46|     x();
           ^^^

References:
   mixed.js:45:20
   45|   if (x instanceof Function) {
                          ^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------- objproto.js:4:4

Cannot cast `c.p` to empty because string [1] is incompatible with empty [2].

   objproto.js:4:4
   4|   (c.p: empty); // error: string ~> empty
         ^^^

References:
   objproto.js:1:14
   1| class C { p: string }
                   ^^^^^^ [1]
   objproto.js:4:9
   4|   (c.p: empty); // error: string ~> empty
              ^^^^^ [2]



Found 9 errors
